# nocturne

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  build.py  environment.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  slurm_exec_script.sh  slurm_sbatch.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  QUESTION.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: run_cpp_tests.yml  run_flake8.yml  run_pydocstyle.yml  run_python_tests.yml
algorithms/: custom_ppo.py  masked_buffer.py
algos/a3c/: base_runner.py
algos/a3c/ppo_utils/: rnn.py
algos/ppo/: a3c_runner.py  base_runner.py  env_wrappers.py
cfgs/: config.py  config.yaml  config_test.yaml
cfgs/algorithm/: APPO.yaml  a3c.yaml  ppo.yaml
cfgs/imitation/: config.yaml
configs/: bc_config.yaml  env_config.yaml  exp_config.yaml  model_config.yaml  sweep_config.py  sweep_configs.py  video_config.yaml
data/: intersection_scenario.json  valid_files.json
data_lp/: valid_files.json
docs/tutorials/: 00_getting_started.ipynb  01_data_structure.ipynb  01_data_structure.md  02_nocturne_concepts.ipynb  02_nocturne_concepts.md  03_imitation_learning.md
evaluation/: agent_performance.ipynb  behav_cloning_analysis.ipynb  compatibility_analysis.ipynb  eval_policy.py  il_analysis.ipynb  il_performance_analysis.ipynb  il_uncertainty_analysis.ipynb  policy_evaluation.py  policy_performance_analysis.ipynb  single_agent_eval.py  trade_off_analysis.ipynb
evaluation/results/: df_hr_rl_sa_1000.csv
examples/: 01_data_structure.ipynb  02_nocturne_concepts.ipynb  03_basic_rl_usage.ipynb  04_ppo_with_sb3.ipynb  05_ppo_with_sb3_ma_control.py  create_env.py  nocturne_functions.py  rendering.py
examples/imitation_learning/: error_reproduce.py  filters.py  model.py  replay_video.py  train.py  waymo_data_loader.py
examples/on_policy_files/: nocturne_runner.py
examples/rllib_files/: run_rllib.py
examples/sample_factory_files/: run_sample_factory.py  success_by_veh_number  visualize_sample_factory.py
experiments/: ppo.py  ppo_sweep.py
experiments/hr_rl/: run_hr_ppo.py  run_hr_ppo_cli.py  run_hr_ppo_w_cli_args.py
experiments/il/: behavioral_cloning.py  run_behavioral_cloning.py
experiments/rl/: dummy_w_cli_args.py  ppo.py  ppo_sweep.py  ppo_w_cli_args.py  run_ppo.py  run_ppo_sweep.py  run_ppo_w_cli_args.py
experiments/slurm/: README.md  sbatch_generator.py
hpc/: Dockerfile  hpc_setup.md  launch_image.sh  post_setup_image.sh
models/il/: human_policy_2023_11_19.pt  human_policy_2023_11_20.pt
networks/: attn_late_fusion.py  mlp.py  mlp_late_fusion.py  perm_eq_attn.py  perm_eq_late_fusion.py  permeq.py  permeq_attn.py
nocturne/: CMakeLists.txt  __init__.py
nocturne/cpp/: CMakeLists.txt
nocturne/cpp/include/: action.h  canvas.h  cyclist.h  ndarray.h  object.h  object_base.h  pedestrian.h  road.h  scenario.h  simulation.h  static_object.h  stop_sign.h  traffic_light.h  vehicle.h  view_field.h
nocturne/cpp/include/geometry/: aabb.h  aabb_interface.h  bvh.h  circle.h  circular_sector.h  geometry_utils.h  intersection.h  line_segment.h  morton.h  point_like.h  polygon.h  range_tree_2d.h  vector_2d.h
nocturne/cpp/include/utils/: data_utils.h  sf_utils.h  unique_id.h
nocturne/cpp/src/: object.cc  road.cc  scenario.cc  simulation.cc  stop_sign.cc  traffic_light.cc  view_field.cc
nocturne/cpp/src/geometry/: bvh.cc  circle.cc  circular_sector.cc  geometry_utils.cc  intersection.cc  line_segment.cc  morton.cc  polygon.cc
nocturne/cpp/src/utils/: sf_utils.cc
nocturne/cpp/tests/: CMakeLists.txt
nocturne/cpp/tests/src/: object_test.cc  road_test.cc  test_simulation.cpp  view_field_test.cc
nocturne/cpp/tests/src/geometry/: bvh_test.cc  circular_sector_test.cc  intersection_test.cc  line_segment_test.cc  polygon_test.cc  range_tree_2d_test.cc
nocturne/envs/: __init__.py  base_env.py  vec_env_ma.py  wrappers.py
nocturne/networks/: attn_late_fusion.py  mlp_late_fusion.py
nocturne/pybind11/include/: nocturne.h  numpy_utils.h
nocturne/pybind11/src/: action.cc  cyclist.cc  nocturne.cc  object.cc  pedestrian.cc  road.cc  scenario.cc  simulation.cc  vector_2d.cc  vehicle.cc
nocturne/scripts/: speed_test.py
nocturne/utils/eval/: average_displacement.py  collision_rate.py  goal_by_intersection.py  goal_reaching_rate.py
nocturne/wrappers/: __init__.py  sb3_wrappers.py
notebooks/: comp_max_vals_scenes.ipynb  lp_benchmark.csv  lp_benchmark.ipynb  perm_eq_net.ipynb
scripts/cluster_scripts/: run_imitation_cluster.py  run_ppo_cluster.py  run_rllib_cluster.py  run_sample_factory_cluster.py  utils.py
scripts/data_analysis/: corner_case_search.py  data_analysis.py  draw_perf_figure.py  extract_reduced_dataset.py  perf_stats_1000.pkl  perf_stats_1000_multi_agent_only.pkl  speed_test.py  speed_test_analysis.py
scripts/json_generation/: make_solvable_files.py  run_waymo_constructor.py  waymo_scenario_construction.py
scripts/paper_plots/: README.md  create_zsc_plot.py  eval_il_agents.py  eval_sample_factory.py  generate_scenes.py
scripts/visualization/: visualize_waymo_map.py  waymo_movie.py
tests/: large_file_tfrecord.json  scenario_test.json  state_test.json  test_config.py  test_dynamics.py  test_rl_env.py  test_simulation_functions.py  test_state_subscribers.py  valgrind-python.supp  valid_files.json
tests/.ipynb_checkpoints/: demo-checkpoint.ipynb
utils/: callbacks.py  config.py  count_intersecting_paths.py  discrete.py  eval.py  evaluation.py  manage_models.py  plot.py  policies.py  random_utils.py  render.py  render_in_subprocess.py  render_utils.py  sb3_vec_env.py  sb3_vec_env_SA_no_dead_agents.py  sb3_vec_env_SA_w_dead_agents.py  string.py  string_utils.py  wrappers.py
utils/data_generation/: make_solvable_files.py  run_waymo_constructor.py  waymo_scenario_construction.py
utils/imitation_learning/: waymo_iterator.py
utils/sb3/: callbacks.py  custom_ppo.py  ma_ppo.py  masked_buffer.py  reg_ppo.py
(+39 files in other folders)
