[tool.poetry]
name = "nocturne"
version = "0.0.1"
description = "A data-driven, fast driving simulator for multi-agent coordination under partial observability."
authors = [
  "Nathan Lichtlé <nathan.lichtle@gmail.com>",
  "Eugene Vinitsky <vinitsky.eugene@gmail.com>",
  "Xiaomeng Yang <bit.yangxm@gmail.com>"
]
maintainers = [
  "Daphne Cornelisse <cornelisse.daphne@nyu.edu>",
  "Eugene Vinitsky <vinitsky.eugene@gmail.com>"
]
homepage = "https://github.com/Emerge-Lab/nocturne"
repository = "https://github.com/Emerge-Lab/nocturne"
documentation = "https://nocturne.readthedocs.io/"
license = "MIT"
readme = "README.md"
keywords = ["Driving", "Simulation", "Autonomous Vehicles", "Waymo", "Reinforcement Learning"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: C++",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Emerge-Lab/nocturne/issues"
"Discussions" = "https://github.com/Emerge-Lab/nocturne/discussions"
"Changelog" = "https://nocturne.readthedocs.io/en/latest/changelog.html"
"Chat" = "https://gitter.im/nocturne/Lobby"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
torch = "^2.0.1"
gym = "^0.26.2"
pybind11 = "^2.11.1"
python-box = "^7.1.1"
gymnasium = "^0.29.1"

[tool.poetry.group.research.dependencies]
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pandas = "^2.1.1"
wandb = "^0.15.12"
tensorboard = "^2.14.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
pylint = "^3.0.0"
tomli = "^2.0.1"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, D102, D202"

[tool.pydocstyle]
convention = "google"

[tool.pylint]
max-line-length = 120
disable = "W1514"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core", "pybind11>=2.11.1", "setuptools>=68.2.2"]
build-backend = "poetry.core.masonry.api"
