[metadata]
name = nocturne
version = 0.0.1
description = A data-driven, fast driving simulator for multi-agent coordination under partial observability.
long_description = file: README.rst # todo
author = Nathan Lichtle, Eugene Vinitsky, and Xiaomeng Yang
author_email = nathan.lichtle@berkeley, ... # todo
url = https://github.com/facebookresearch/nocturne/
license = MIT

classifiers = # todo
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Topic :: Software Development :: Libraries :: Python Modules

keywords = 
    Driving
    Simulation
    Autonomous Vehicles
    Waymo
    Reinforcement Learning

# todo
project_urls =
    Documentation = https://nocturne.readthedocs.io/
    Bug Tracker = https://github.com/fb/nocturne/issues
    Discussions = https://github.com/fb/nocturne/discussions
    Changelog = https://nocturne.readthedocs.io/en/latest/changelog.html
    Chat = https://gitter.im/nocturne/Lobby

[options]
zip_safe = False
python_requires = >=3.8

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests

[flake8]
max-line-length = 120
show_source = True
exclude = .git, __pycache__, build, docs, _deps, third_party, algos, nocturne/envs/__init__.py, examples/nocturne_functions.py

[pydocstyle]
inherit = false
match = .*\.py
match_dir = ^(?!.git|__pycache__|build|docs|_deps|third_party|algos).*
convention = numpy
